# dotfiles

./: .bash_aliases  .bashrc  .gitconfig  .zshrc  README.md
formatting/: .clang-format
hammerspoon/: init.lua  lockin  workspace-manager.lua
karabiner/: karabiner.json
scripts/: check_symlinks.sh  setup_symlinks.sh
tools/: README.md  pyproject.toml
tools/psk/: cli.py  cursor.py  db.py  pr_inspect.py  project.py  qa.py  scopeo.py  setup.py  staging.py  ticketing.py  worktree.py
tools/psk/git_tui/: __init__.py  app.py  git_ops.py  styles.tcss
tools/tests/: test_cursor.py  test_project.py  test_scopeo.py  test_setup.py  test_staging.py  test_worktree.py
