[project]
name = "psk"
version = "0.1.0"
description = "Personal automation tools"
requires-python = ">=3.11"
dependencies = ["typer>=0.15.1", "questionary>=2.0"]

[project.scripts]
worktree = "psk.cli:main_worktree"
scopeo = "psk.cli:main_scopeo"
pr-inspect = "psk.cli:main_pr_inspect"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
